--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <img src="https://avatars.githubusercontent.com/u/84268664?v=4">
 
       </h1>
+      <ul>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Unordered list</li>
+</ul>
   </body>
 
 </html>
